syntax="proto3";
option go_package=  "/grpc";

package cart;

message ReplyFromStock{
  bool Stock = 1;
  repeated CalculateCost calculateCost = 2;
  string err = 3;
}

message CalculateCost{
  string ItemName = 1;
  int64 CostPerUnit = 2;
}

message RequestToStock{
  repeated string ingredient = 1;
}

service SendIngredients{
  rpc SendIngredients (RequestToStock) returns (ReplyFromStock);
}