syntax="proto3";
option go_package=  "/report";

message reportRequest{
  string ID = 1;
  string ItemName = 2;
  string Category = 3;
  int64 Amount = 4;
  string Unit = 5;
}